[project]
name = "localscope"
version = "0.2.0"
requires-python = ">=3.8"
authors = [
    {name = "Till Hoffmann"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
]
description = "Restrict the scope of functions for reproducible code execution and peace of mind."
readme = {text = "Restrict the scope of functions for reproducible code execution and peace of mind. See the [documentation](https://localscope.readthedocs.io) for details.", content-type = "text/markdown"}

[project.urls]
Documentation = "https://localscope.readthedocs.io"
Repository = "https://github.com/tillahoffmann/localscope.git"
Issues = "https://github.com/tillahoffmann/localscope/issues"
